# CrimsonEngine

./: .gitmodules  CMakeLists.txt  Crimson.sln  Crimson.slnx  Euphoria.sln  LICENSE  README.md  library.h
Content/Shaders/: Texture.hlsl
Engine/src/: App.cpp
src/Crimson.Audio/: Audio.cs  AudioType.cs  Class1.cs  Crimson.Audio.csproj  StreamSound.cs  StreamUtils.cs
src/Crimson.Content/: Class1.cs  Content.cs  Crimson.Content.csproj  IContentResource.cs  IContentResourceBase.cs  Resources.cs
src/Crimson.Core/: EnvVar.cs  Logger.cs  Metrics.cs  Version.cs
src/Crimson.Data/: Class1.cs  Crimson.Data.csproj  QuickConfig.cs
src/Crimson.Engine/: App.cs  AppOptions.cs  AppType.cs  Crimson.Engine.csproj  GlobalApp.cs  ImGuiController.cs  Input.cs  Metrics.cs
src/Crimson.Graphics/: Backend.cs  Bitmap.cs  BlendMode.cs  Camera.cs  Crimson.Graphics.csproj  DDS.cs  Font.cs  GraphicsUtils.cs  Mesh.cs  Model.cs  ModelMesh.cs  PixelFormat.cs  Renderable.cs  Renderer.cs  RendererOptions.cs  RendererType.cs  Skybox.cs  Sprite.cs  SurfaceInfo.cs  Texture.cs  (+2 more)
src/Crimson.Graphics.RHI/: Backend.cs  Buffer.cs  BufferUsage.cs  ColorAttachmentInfo.cs  CommandList.cs  Crimson.Graphics.RHI.csproj  Device.cs  Format.cs  GraphicsDevice.cs  GraphicsPipelineInfo.cs  InputElementDescription.cs  LoadOp.cs  Pipeline.cs  Semantic.cs  ShaderModule.cs  ShaderStage.cs  StoreOp.cs  Texture.cs  TextureInfo.cs  TextureType.cs  TextureUsage.cs  VertexBufferDescription.cs
src/Crimson.Graphics.RHI.D3D11/: Crimson.Graphics.RHI.D3D11.csproj  D3D11Buffer.cs  D3D11CommandList.cs  D3D11Device.cs  D3D11Pipeline.cs  D3D11ShaderModule.cs  D3D11Texture.cs  D3D11Utils.cs
src/Crimson.Graphics.RHI.OpenGL/: Crimson.Graphics.RHI.OpenGL.csproj  GLContext.cs  GLGraphicsDevice.cs
src/Crimson.Graphics.RHI.Vulkan/: Crimson.Graphics.RHI.Vulkan.csproj  Queues.cs  VulkanBuffer.cs  VulkanCommandList.cs  VulkanDevice.cs  VulkanPipeline.cs  VulkanResult.cs  VulkanShaderModule.cs  VulkanTexture.cs  VulkanUtils.cs
src/Crimson.Graphics.SDLShaderCross.Native/: Crimson.Graphics.SDLShaderCross.Native.csproj
src/Crimson.Graphics.Vulkan/: Crimson.Graphics.Vulkan.csproj  GraphicsDevice.cs  VkUtils.cs
(+342 files in other folders)
